<resources>
    <string name="app_name">Divine Limousine</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_reservation">My Reservations</string>
    <string name="title_activity_reserve_car">Reservation Info</string>
    <string name="run_type_prompt">Type of Run</string>
    <string-array name="type_of_run">
        <item>Select One</item>
        <item>Birthday</item>
        <item>Quincenera</item>
        <item>Wedding</item>
        <item>Anniversary</item>
        <item>Bachelor/et</item>
        <item>Other</item>
    </string-array>
    <string-array name="pickUp_dropOff">
        <item>Pick Up</item>
        <item>Drop Off</item>
    </string-array>
    <string name="title_activity_preferences">PreferencesActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_fleet">Fleet</string>
    <string name="title_activity_create_account">CreateAccount</string>
    <string name="title_activity_login_activityer">Sign in</string>
    <string name="address">ADDRESS</string>
    <string name="click">click here</string>
    <string name="anotherLocation">add another location</string>
    <string name="continu">CONTINUE</string>
    <string name="primaryContact">PRIMARY CONTACT</string>
    <string name="reservationName">RESERVATION NAME</string>
    <string name="secondaryContact">SECONDARY CONTACT</string>
    <string name="prefer">DO YOU PREFER:</string>
    <string name="call">CALL</string>
    <string name="text">TEXT</string>
    <string name="userOrPhone">USERNAME OR PHONE NUMBER</string>
    <string name="password">PASSWORD</string>
    <string name="confirmPass">CONFIRM PASSWORD</string>
    <string name="createAccount">Create Account</string>
    <string name="login">Login</string>
    <string name="pastRuns">View Past Runs</string>
    <string name="group1to10">1-10</string>
    <string name="groupSize">GROUP SIZE</string>
    <string name="group11to14">11-14</string>
    <string name="group14to20">14-20</string>
    <string name="group20plus">20+</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="reserveLimo">RESERVE YOUR LIMOUSINE</string>
    <string name="viewFleet">View Fleet</string>
    <string name="calendar">Calendar</string>
</resources>
