<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.divinelimoutah.divinelimousine.LoginActivity"
    android:background="@drawable/image_one"
    android:gravity="center_horizontal">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/groupSize"
        android:id="@+id/textView7"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff"
        android:layout_marginTop="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_above="@+id/linearLayout"
        android:id="@+id/relativeLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/continueButton"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/black_partition"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:onClick="createAccount"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:layout_centerInParent="true"
            android:text="@string/group1to10"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_above="@+id/linearLayout"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contiueButton"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/black_partition"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:onClick="createAccount"/>

        <TextView
            android:id="@+id/texView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:layout_centerInParent="true"
            android:text="@string/group11to14"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_above="@+id/linearLayout"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contineButton"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/black_partition"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:onClick="createAccount"/>

        <TextView
            android:id="@+id/textViw8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:layout_centerInParent="true"
            android:text="@string/group14to20"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_above="@+id/linearLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contineutton"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/black_partition"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:onClick="createAccount"/>

        <TextView
            android:id="@+id/textVie8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:layout_centerInParent="true"
            android:text="@string/group20plus"
            android:textColor="#ffffff" />
    </RelativeLayout>


</LinearLayout>
