<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.divinelimoutah.divinelimousine.LoginActivity"
    android:background="@drawable/image_one"
    android:gravity="center_horizontal">

    <!-- Login progress -->


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--design a custom spinner, or just make so something pops up when you click on them.-->

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:id="@+id/linearLayout"
                android:gravity="bottom">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:onClick="addPickUp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:id="@+id/imageButton"
                        android:src="@drawable/down_arrow"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Pick Up"
                        android:textColor="#ffffff"
                        android:textSize="25sp"
                        android:layout_gravity="center"
                        android:id="@+id/textView" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginStart="50dp"
                    android:onClick="pickTime">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="00:00 AM"
                        android:textColor="#ffffff"
                        android:textSize="25sp"
                        android:layout_gravity="center"
                        android:id="@+id/teView" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:id="@+id/imageBton"
                        android:src="@drawable/down_arrow"/>

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/address"
                android:id="@+id/addressTextView"
                android:layout_gravity="center_horizontal"
                android:textColor="#FFFFFF"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="12dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/address"
                android:singleLine="true"
                android:hint="@string/click"
                android:background="@drawable/white_spacer"
                android:selectAllOnFocus="true"
                android:gravity="center"
                android:textColor="#ffffff"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="35dp"
                android:onClick="addAnotherLocation"
                android:layout_gravity="center">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anotherLocation"
                    android:textColor="#ffffff"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    />

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/plus_sign"
                    android:layout_gravity="center"
                    />

            </LinearLayout>




        </LinearLayout>

    </ScrollView>


    <!--make so the button stays at the bottom of the screen even if the scroll view gets to big.-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/continueButton"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/blue_button"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:onClick="createAccount"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_centerInParent="true"
            android:text="@string/continu"
            android:textColor="#ffffff" />
    </RelativeLayout>
</LinearLayout>
